--- a/nivelA/unidade2/index.html
+++ b/nivelA/unidade2/index.html
@@ -168,6 +168,7 @@
         <a href="../unidade2/Missing Word2/index.html"><img src="../../imagens/botoes/missing_word_button.png" alt="Missing Word2"></a>
         <a href="../unidade2/Missing Word3/index.html"><img src="../../imagens/botoes/missing_word_button.png" alt="Missing Word3"></a>
         <a href="../unidade2/Speak/index.html"><img src="../../imagens/botoes/speak_button.png" alt="Speak"></a>
+        <a href="../unidade2/Speak2/index.html"><img src="../../imagens/botoes/speak_button.png" alt="Speak2"></a>
         <a href="../unidade2/MatchingGame/index.html"><img src="../../imagens/botoes/matching_game_button.png" alt="Matching Game"></a>      
         <a href="../unidade2/Fine Motor Skills/index.html"><img src="../../imagens/botoes/Fine_Motor_Skills_Button.png" alt="Fine Motor Skills"></a>
         <a href="../unidade2/Missing Letter/index.html"><img src="../../imagens/botoes/missing_letter_button.png" alt="Missing Letter"></a>
