--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -107,7 +107,7 @@
         }
         #finalFeedback {
             font-size: 2em;
-            color: black;
+            color: green;
             display: none;
             margin-top: 20px;
             animation: fadeIn 2s ease-in-out;
@@ -275,10 +275,10 @@
                 stopCorrectFeedback();
                 if (currentWordIndex + 1 < words.length) {
                     loadWord(currentWordIndex + 1);
+                    enableStartButton();
                 } else {
-                    showFinalFeedback();
+                    showFinalFeedback(); // Only show the feedback after the last word is correctly read
                 }
-                enableStartButton();
             }, 3000); // 3 segundos para o feedback
         }
 
@@ -348,6 +348,7 @@
             finalFeedbackDiv.textContent = "You've completed all words!";
             finalFeedbackDiv.style.display = "block";
             restartButton.style.display = "inline-block"; // Show restart button at the end
+            enableStartButton();
         }
 
         function restartGame() {
