--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -102,6 +102,11 @@
             width: 50px;
             height: 50px;
         }
+        #startButton:disabled {
+            background-color: #cccccc;
+            cursor: not-allowed;
+            box-shadow: none;
+        }
         #startButton:hover {
             box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
         }
@@ -177,10 +182,10 @@
             .catch(error => console.error('Error fetching words:', error));
 
         function loadWord(index) {
-            if (index >= words.length) {
-                showFinalFeedback(); // Show feedback when all words are completed
-            } else if (index < 0) {
+            if (index < 0) {
                 currentWordIndex = 0;
+            } else if (index >= words.length) {
+                return; // Prevent loading past the last word
             } else {
                 currentWordIndex = index;
                 const currentWord = words[currentWordIndex];
@@ -190,6 +195,7 @@
                 document.getElementById("image").src = imageFolderUrl + currentImage;
                 resetFeedback(); // Clear any feedback when navigating
                 tryAgainPlayed = false; // Reset Try Again flag
+                enableStartButton(); // Re-enable the start button
             }
         }
 
@@ -215,14 +221,16 @@
 
         startButton.addEventListener('click', () => {
             disableStartButton();
-            startRecognition(); // Start recognition without stopping any ongoing processes
+            startRecognition();
         });
 
         prevButton.addEventListener('click', () => {
+            disableStartButton();
             loadWord(currentWordIndex - 1);
         });
 
         nextButton.addEventListener('click', () => {
+            disableStartButton();
             loadWord(currentWordIndex + 1);
         });
 
@@ -275,7 +283,6 @@
                 stopCorrectFeedback();
                 if (currentWordIndex + 1 < words.length) {
                     loadWord(currentWordIndex + 1);
-                    enableStartButton();
                 } else {
                     showFinalFeedback(); // Only show the feedback after the last word is correctly read
                 }
