--- a/nivelA/unidade2/Speak3/index.html
+++ b/nivelA/unidade2/Speak3/index.html
@@ -264,11 +264,12 @@
         recognition.onend = () => {
             if (!resultDiv.textContent.includes("Correct!") && !tryAgainPlayed) {
                 handleIncorrectAttempt();
+            } else if (tryAgainPlayed) {
+                startRecognition(); // Reinicia o reconhecimento automaticamente após a segunda tentativa
             }
         };
 
         function startRecognition() {
-            resultDiv.textContent = "Listening...";
             recognition.start();
             recognitionTimeout = setTimeout(() => {
                 recognition.stop();
@@ -301,6 +302,8 @@
                         enableStartButton();
                     }, 2000);
                 });
+            } else {
+                startRecognition(); // Reinicia o reconhecimento para a segunda tentativa
             }
         }
 
