--- a/nivelA/unidade2/Speak/index.html
+++ b/nivelA/unidade2/Speak/index.html
@@ -170,7 +170,6 @@
         let words = [];
         let currentWordIndex = 0;
         let recognitionTimeout;
-        let tryAgainPlayed = false;
 
         // Fetch words from the words.txt file
         fetch(wordListUrl)
@@ -194,7 +193,6 @@
                 document.getElementById("word").textContent = currentWord;
                 document.getElementById("image").src = imageFolderUrl + currentImage;
                 resetFeedback(); // Clear any feedback when navigating
-                tryAgainPlayed = false; // Reset Try Again flag
                 enableStartButton(); // Re-enable the start button
             }
         }
@@ -262,7 +260,7 @@
         };
 
         recognition.onend = () => {
-            if (!resultDiv.textContent.includes("Correct!") && !tryAgainPlayed) {
+            if (!resultDiv.textContent.includes("Correct!")) {
                 handleIncorrectAttempt();
             }
         };
@@ -293,9 +291,8 @@
             resultDiv.textContent = tryAgainMessage;
             resultDiv.style.color = "red";
             readMessage(tryAgainMessage, () => {
-                setTimeout(() => {
-                    loadWord(currentWordIndex); // Recarregar a mesma palavra do zero
-                }, 2000);
+                readWordWithHighlight(words[currentWordIndex]);
+                enableStartButton();
             });
         }
 
