--- a/nivelA/unidade2/Speak2/index.html
+++ b/nivelA/unidade2/Speak2/index.html
@@ -165,8 +165,8 @@
     </div>
 
     <script>
-        const wordListUrl = '../data2/words.txt';
-        const imageFolderUrl = '../data2/imagens/';
+        const wordListUrl = '../data1/words.txt';
+        const imageFolderUrl = '../data1/imagens/';
         let words = [];
         let currentWordIndex = 0;
         let recognitionTimeout;
@@ -264,8 +264,6 @@
         recognition.onend = () => {
             if (!resultDiv.textContent.includes("Correct!") && !tryAgainPlayed) {
                 handleIncorrectAttempt();
-            } else if (tryAgainPlayed) {
-                startRecognition(); // Reinicia o reconhecimento automaticamente após a segunda tentativa
             }
         };
 
@@ -291,20 +289,14 @@
         }
 
         function handleIncorrectAttempt() {
-            if (!tryAgainPlayed) {
-                tryAgainPlayed = true;
-                const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
-                resultDiv.textContent = tryAgainMessage;
-                resultDiv.style.color = "red";
-                readMessage(tryAgainMessage, () => {
-                    setTimeout(() => {
-                        readWordWithHighlight(words[currentWordIndex]);
-                        enableStartButton();
-                    }, 2000);
-                });
-            } else {
-                startRecognition(); // Reinicia o reconhecimento para a segunda tentativa
-            }
+            const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
+            resultDiv.textContent = tryAgainMessage;
+            resultDiv.style.color = "red";
+            readMessage(tryAgainMessage, () => {
+                setTimeout(() => {
+                    loadWord(currentWordIndex); // Recarregar a mesma palavra do zero
+                }, 2000);
+            });
         }
 
         function resetFeedback() {
