--- a/nivelA/unidade2/Speak2/index.html
+++ b/nivelA/unidade2/Speak2/index.html
@@ -165,12 +165,12 @@
     </div>
 
     <script>
-        const wordListUrl = '../data1/words.txt';
-        const imageFolderUrl = '../data1/imagens/';
+        const wordListUrl = '../data2/words.txt';
+        const imageFolderUrl = '../data2/imagens/';
         let words = [];
         let currentWordIndex = 0;
         let recognitionTimeout;
-        let tryAgainPlayed = false;
+        let tryAgainInProgress = false; // Flag to prevent duplicate "Try Again"
 
         // Fetch words from the words.txt file
         fetch(wordListUrl)
@@ -194,7 +194,7 @@
                 document.getElementById("word").textContent = currentWord;
                 document.getElementById("image").src = imageFolderUrl + currentImage;
                 resetFeedback(); // Clear any feedback when navigating
-                tryAgainPlayed = false; // Reset Try Again flag
+                tryAgainInProgress = false; // Reset flag
                 enableStartButton(); // Re-enable the start button
             }
         }
@@ -250,7 +250,9 @@
             if (speechResult.includes(expectedWord)) {
                 handleCorrectAnswer();
             } else {
-                handleIncorrectAttempt();
+                if (!tryAgainInProgress) {
+                    handleIncorrectAttempt();
+                }
             }
         };
 
@@ -262,7 +264,7 @@
         };
 
         recognition.onend = () => {
-            if (!resultDiv.textContent.includes("Correct!") && !tryAgainPlayed) {
+            if (!resultDiv.textContent.includes("Correct!") && !tryAgainInProgress) {
                 handleIncorrectAttempt();
             }
         };
@@ -289,13 +291,15 @@
         }
 
         function handleIncorrectAttempt() {
+            tryAgainInProgress = true;
             const tryAgainMessage = "Try again. Listen to the correct pronunciation of this word.";
             resultDiv.textContent = tryAgainMessage;
             resultDiv.style.color = "red";
             readMessage(tryAgainMessage, () => {
-                setTimeout(() => {
-                    loadWord(currentWordIndex); // Recarregar a mesma palavra do zero
-                }, 2000);
+                readWordWithHighlight(words[currentWordIndex], () => {
+                    enableStartButton();
+                    tryAgainInProgress = false;
+                });
             });
         }
 
@@ -327,13 +331,14 @@
             speechSynthesis.speak(utterance);
         }
 
-        function readWordWithHighlight(word) {
+        function readWordWithHighlight(word, callback) {
             wordDiv.classList.add("enlarged");
             const utterance = new SpeechSynthesisUtterance(word);
             utterance.lang = 'en-US';
             utterance.rate = 0.7;
             utterance.onend = () => {
                 wordDiv.classList.remove("enlarged");
+                if (callback) callback();
             };
             speechSynthesis.speak(utterance);
         }
