--- a/nivelA/unidade2/Grammar/aulas/aula5/index.html
+++ b/nivelA/unidade2/Grammar/aulas/aula5/index.html
@@ -7,20 +7,80 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            margin: 0;
             padding: 20px;
+            background-color: #f0f0f0;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
         }
-        h1, h2 {
+        header {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 1.5em;
+        }
+        header button {
+            background-color: white;
+            color: #4CAF50;
+            border: 2px solid #4CAF50;
+            padding: 5px 10px;
+            font-size: 1em;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        header button:hover {
+            background-color: #45a049;
+            color: white;
+        }
+        .content-wrapper {
+            width: 100%;
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        h2 {
             color: #4CAF50;
         }
         .highlight {
             background-color: yellow;
         }
+        button.start-lesson {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+        button.start-lesson:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 <body>
-    <h1>Personal Pronouns</h1>
-    <div id="content"></div>
-    <button onclick="startLesson()">Iniciar Aula</button>
+    <header>
+        <button onclick="history.back()">Back</button>
+        <h1>Personal Pronouns</h1>
+    </header>
+    <div class="content-wrapper">
+        <div id="content"></div>
+        <button class="start-lesson" onclick="startLesson()">Iniciar Aula</button>
+    </div>
 
     <script>
         let texts = [];
