--- a/nivelA/unidade2/Grammar/aulas/aula5/index.html
+++ b/nivelA/unidade2/Grammar/aulas/aula5/index.html
@@ -19,26 +19,24 @@
             background-color: #4CAF50;
             color: white;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
+            justify-content: center;
             padding: 10px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
             z-index: 1000;
-        }
-        .header-content {
-            display: flex;
-            align-items: center;
-            width: 100%;
-            max-width: 800px;
-            justify-content: space-between;
         }
         h1 {
             margin: 0;
             font-size: 1.5em;
             text-align: center;
-            flex-grow: 1;
         }
-        header button {
+        .button-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 10px;
+        }
+        .button-container button {
             background-color: white;
             color: #4CAF50;
             border: 2px solid #4CAF50;
@@ -48,22 +46,25 @@
             border-radius: 5px;
             display: flex;
             align-items: center;
+            margin: 0 5px;
         }
-        header button img {
+        .button-container button svg {
             margin-right: 5px;
         }
-        header button:hover {
+        .button-container button:hover {
             background-color: #45a049;
             color: white;
         }
         .content-wrapper {
             width: 100%;
             max-width: 800px;
-            margin: 100px auto 20px auto; /* Ajusta o topo para evitar sobreposição com o cabeçalho fixo */
+            margin: 120px auto 20px auto; /* Ajusta o topo para evitar sobreposição com o cabeçalho fixo */
             padding: 20px;
             background-color: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
+            overflow-y: auto;
+            max-height: calc(100vh - 140px); /* Ajusta a altura máxima para garantir o scroll dentro da área visível */
         }
         .highlight {
             background-color: yellow;
@@ -72,11 +73,19 @@
 </head>
 <body>
     <header>
-        <div class="header-content">
-            <button onclick="history.back()">Back</button>
-            <h1>Personal Pronouns</h1>
+        <h1>Personal Pronouns</h1>
+        <div class="button-container">
+            <button onclick="history.back()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M15 8a.5.5 0 0 1-.5.5H2.707l3.147 3.146a.5.5 0 0 1-.708.708l-4-4a.5.5 0 0 1 0-.708l4-4a.5.5 0 0 1 .708.708L2.707 7.5H14.5A.5.5 0 0 1 15 8z"/>
+                </svg>
+                Back
+            </button>
             <button id="toggleButton" class="start-lesson" onclick="toggleLesson()">
-                <img src="play-icon.png" alt="Play" id="toggleIcon"> Start Lesson
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16" id="toggleIcon">
+                    <path d="M11.596 8.697l-6.363 3.692A.5.5 0 0 1 4.5 12.846V3.154a.5.5 0 0 1 .733-.442l6.363 3.692a.5.5 0 0 1 0 .884z"/>
+                </svg>
+                Start Lesson
             </button>
         </div>
     </header>
@@ -145,9 +154,9 @@
             const button = document.getElementById('toggleButton');
             const icon = document.getElementById('toggleIcon');
             if (isPlaying) {
-                button.innerHTML = '<img src="pause-icon.png" alt="Pause" id="toggleIcon"> Pause Lesson';
+                button.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pause-fill" viewBox="0 0 16 16" id="toggleIcon"><path d="M5.5 3.5A.5.5 0 0 1 6 4v8a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5zM10 3.5A.5.5 0 0 1 10.5 4v8a.5.5 0 0 1-1 0V4a.5.5 0 0 1 .5-.5z"/></svg> Pause Lesson';
             } else {
-                button.innerHTML = '<img src="play-icon.png" alt="Play" id="toggleIcon"> Start Lesson';
+                button.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-fill" viewBox="0 0 16 16" id="toggleIcon"><path d="M11.596 8.697l-6.363 3.692A.5.5 0 0 1 4.5 12.846V3.154a.5.5 0 0 1 .733-.442l6.363 3.692a.5.5 0 0 1 0 .884z"/></svg> Start Lesson';
             }
         }
 
@@ -167,12 +176,22 @@
                 };
 
                 speechSynthesis.speak(utterance);
+                scrollToElement(element); // Adiciona a rolagem ao próximo elemento
             } else {
                 pauseLesson();
             }
         }
 
+        function scrollToElement(element) {
+            const contentWrapper = document.getElementById('contentWrapper');
+            const elementPosition = element.offsetTop;
+            const wrapperHeight = contentWrapper.clientHeight;
+            const scrollPosition = elementPosition - (wrapperHeight / 2);
+            contentWrapper.scrollTo({ top: scrollPosition, behavior: 'smooth' });
+        }
+
         function startScroll() {
+            // Ajuste para que o scroll acompanhe automaticamente o texto que está sendo lido
             const contentWrapper = document.getElementById('contentWrapper');
             scrollInterval = setInterval(() => {
                 if (contentWrapper.scrollTop + contentWrapper.clientHeight < contentWrapper.scrollHeight) {
