--- a/nivelA/unidade2/Grammar/aulas/aula5/index.html
+++ b/nivelA/unidade2/Grammar/aulas/aula5/index.html
@@ -98,7 +98,6 @@
         let isPlaying = false;
         let currentIndex = 0;
         let utterance;
-        let scrollInterval;
 
         // Função para carregar o arquivo .txt
         async function loadTextFile() {
@@ -138,7 +137,6 @@
             isPlaying = true;
             updateButtonState();
             speakNext();
-            startScroll();
         }
 
         function pauseLesson() {
@@ -147,7 +145,6 @@
             if (utterance) {
                 speechSynthesis.cancel();
             }
-            clearInterval(scrollInterval);
         }
 
         function updateButtonState() {
@@ -176,7 +173,7 @@
                 };
 
                 speechSynthesis.speak(utterance);
-                scrollToElement(element); // Adiciona a rolagem ao próximo elemento
+                scrollToElement(element); // Rola para o próximo elemento quando ele começar a ser lido
             } else {
                 pauseLesson();
             }
@@ -188,18 +185,6 @@
             const wrapperHeight = contentWrapper.clientHeight;
             const scrollPosition = elementPosition - (wrapperHeight / 2);
             contentWrapper.scrollTo({ top: scrollPosition, behavior: 'smooth' });
-        }
-
-        function startScroll() {
-            // Ajuste para que o scroll acompanhe automaticamente o texto que está sendo lido
-            const contentWrapper = document.getElementById('contentWrapper');
-            scrollInterval = setInterval(() => {
-                if (contentWrapper.scrollTop + contentWrapper.clientHeight < contentWrapper.scrollHeight) {
-                    contentWrapper.scrollTop += 1;
-                } else {
-                    clearInterval(scrollInterval);
-                }
-            }, 50);
         }
 
         // Carrega o arquivo .txt quando a página é carregada
