--- a/nivelA/unidade2/Grammar/aulas/aula5/index.html
+++ b/nivelA/unidade2/Grammar/aulas/aula5/index.html
@@ -69,6 +69,10 @@
         .highlight {
             background-color: yellow;
         }
+        .spacer {
+            margin: 20px 0;
+            border-top: 2px solid #4CAF50;
+        }
     </style>
 </head>
 <body>
@@ -116,12 +120,18 @@
                 
                 // Verifica se todos os valores são válidos antes de continuar
                 if (id && lang && text) {
-                    texts.push({ id, lang, text });
+                    if (id === 'spacer') {
+                        const hr = document.createElement('div');
+                        hr.className = 'spacer';
+                        contentDiv.appendChild(hr);
+                    } else {
+                        texts.push({ id, lang, text });
 
-                    const p = document.createElement('p');
-                    p.id = id;
-                    p.innerText = text;
-                    contentDiv.appendChild(p);
+                        const p = document.createElement('p');
+                        p.id = id;
+                        p.innerText = text;
+                        contentDiv.appendChild(p);
+                    }
                 }
             });
         }
