--- a/nivelA/unidade2/Grammar/index.html
+++ b/nivelA/unidade2/Grammar/index.html
@@ -119,6 +119,19 @@
             color: #007bff;
             margin-left: 10px;
         }
+        .show-answer-btn {
+            padding: 8px 15px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background-color 0.3s ease;
+        }
+        .show-answer-btn:hover {
+            background-color: #0056b3;
+        }
         @media (max-width: 768px) {
             .container {
                 padding: 15px;
@@ -213,7 +226,7 @@
                     } else if (line.includes('[Answer:')) {
                         const [question, answer] = line.split('[Answer:');
                         const cleanedAnswer = answer.replace(']', '').trim();
-                        htmlContent += `<p>${question.trim()} <button onclick="showAnswer(this.nextElementSibling)">Show Answer</button><span class="answer" style="display:none;">${cleanedAnswer}</span></p>`;
+                        htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="showAnswer(this.nextElementSibling)">Show Answer</button><span class="answer" style="display:none;">${cleanedAnswer}</span></p>`;
                     } else {
                         htmlContent += `<p>${line}</p>`;
                     }
