--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -114,6 +114,24 @@
         .button-container img:hover {
             transform: scale(1.1);
         }
+        .answer {
+            font-weight: bold;
+            color: #007bff;
+            margin-left: 10px;
+        }
+        .show-answer-btn {
+            padding: 8px 15px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background-color 0.3s ease;
+        }
+        .show-answer-btn:hover {
+            background-color: #0056b3;
+        }
         @media (max-width: 768px) {
             .container {
                 padding: 15px;
@@ -167,7 +185,7 @@
     <h1 id="title">Loading title...</h1>
     
     <div class="image-container">
-        <img id="main-image" src="imagem.png" alt="Example Imagem">
+        <img id="main-image" src="image.png" alt="Example Image">
     </div>
 
     <div class="button-container">
@@ -191,7 +209,7 @@
                 const lines = data.split('\n');
                 let currentSection = '';
                 let htmlContent = '';
-                
+
                 lines.forEach(line => {
                     if (line.startsWith('Title: ')) {
                         document.getElementById('title').innerText = line.replace('Title: ', '');
@@ -205,12 +223,10 @@
                         htmlContent += `<h2>${line.replace('Subtitle: ', '')}</h2>`;
                     } else if (line.startsWith('Text: ')) {
                         htmlContent += `<p>${line.replace('Text: ', '')}</p>`;
-                    } else if (line.startsWith('Examples from the Creation Story:')) {
-                        htmlContent += `<p><strong>${line}</strong></p><ul>`;
-                    } else if (line.startsWith('"')) {
-                        htmlContent += `<li>${line}</li>`;
-                    } else if (line.startsWith('Examples')) {
-                        htmlContent += `</ul>`;
+                    } else if (line.includes('[Answer:')) {
+                        const [question, answer] = line.split('[Answer:');
+                        const cleanedAnswer = answer.replace(']', '').trim();
+                        htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="showAnswer(this.nextElementSibling)">Show Answer</button><span class="answer" style="display:none;">${cleanedAnswer}</span></p>`;
                     } else {
                         htmlContent += `<p>${line}</p>`;
                     }
@@ -219,6 +235,10 @@
                 contentDiv.innerHTML = htmlContent + '</div>';
             })
             .catch(error => console.error('Error loading the text file:', error));
+    }
+
+    function showAnswer(answerElement) {
+        answerElement.style.display = 'inline';
     }
 
     function generatePDF() {
