--- a/nivelA/unidade2/Grammar/index.html
+++ b/nivelA/unidade2/Grammar/index.html
@@ -121,16 +121,18 @@
         }
         .show-answer-btn {
             padding: 8px 15px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
+            background-color: white;
+            color: black;
+            border: 1px solid #ccc;
+            border-radius: 20px;
             cursor: pointer;
             font-size: 1rem;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         }
         .show-answer-btn:hover {
-            background-color: #0056b3;
+            background-color: #f0f0f0;
+            box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
         }
         @media (max-width: 768px) {
             .container {
@@ -226,7 +228,7 @@
                     } else if (line.includes('[Answer:')) {
                         const [question, answer] = line.split('[Answer:');
                         const cleanedAnswer = answer.replace(']', '').trim();
-                        htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="showAnswer(this.nextElementSibling)">Show Answer</button><span class="answer" style="display:none;">${cleanedAnswer}</span></p>`;
+                        htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="showAnswer(this.nextElementSibling)">Answer</button><span class="answer" style="display:none;">${cleanedAnswer}</span></p>`;
                     } else {
                         htmlContent += `<p>${line}</p>`;
                     }
