--- a/nivelA/unidade1/Grammar/index.html
+++ b/nivelA/unidade1/Grammar/index.html
@@ -187,7 +187,7 @@
     <h1 id="title">Loading title...</h1>
     
     <div class="image-container">
-        <img id="main-image" src="image.png" alt="Example Image">
+        <img id="main-image" src="imagem.png" alt="Example Imagem">
     </div>
 
     <div class="button-container">
