--- a/nivelB/unidade1/Grammar/index.html
+++ b/nivelB/unidade1/Grammar/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>There is / There are - David and Goliath</title>
+    <title>Indefinite Articles - The Creation Story</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -13,53 +13,64 @@
             line-height: 1.6;
         }
         .container {
-            max-width: 100%;
+            max-width: 800px;
             margin: auto;
             background: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
+        .back-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background-color: #007bff;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+        .back-button:hover {
+            background-color: #0056b3;
         }
         h1 {
             text-align: center;
             color: #333;
-            font-size: 1.5rem;
+            font-size: 2rem;
+            margin-top: 70px; /* Ajuste para evitar sobreposição */
         }
         h2 {
             background-color: #28a745;
             color: white;
             padding: 10px;
             border-radius: 4px;
-            font-size: 1.25rem;
+            font-size: 1.5rem;
+            text-align: center;
         }
         .section {
             background-color: #d4edda;
             margin-bottom: 20px;
-            padding: 15px;
+            padding: 20px;
             border-radius: 5px;
         }
         .section p {
             margin: 0;
-            padding: 5px 0;
+            padding: 10px 0;
+            font-size: 1.2rem;
         }
-        .section input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-            background-color: #f4f4f4;
-            cursor: not-allowed;
+        .section ul {
+            padding-left: 20px;
         }
-        .section input[readonly] {
-            background-color: #f4f4f4;
-            color: #000;
+        .section ul li {
+            margin: 5px 0;
         }
         .btn-download {
             display: block;
             width: 100%;
-            padding: 10px;
+            padding: 15px;
             background-color: #218838;
             color: white;
             text-align: center;
@@ -67,6 +78,7 @@
             border-radius: 5px;
             margin-top: 20px;
             cursor: pointer;
+            font-size: 1.2rem;
         }
         .btn-download:hover {
             background-color: #1e7e34;
@@ -76,126 +88,256 @@
             justify-content: center;
             margin-bottom: 20px;
         }
-
         .image-container img {
             max-width: 100%;
             height: auto;
             border-radius: 8px;
         }
-
+        .button-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+            flex-wrap: wrap;
+        }
+        .button-container button {
+            background-color: transparent;
+            border: none;
+            margin: 5px;
+            cursor: pointer;
+        }
+        .button-container img {
+            max-width: 100px;
+            max-height: 100px;
+            border-radius: 8px;
+            transition: transform 0.3s ease;
+        }
+        .button-container img:hover {
+            transform: scale(1.1);
+        }
+        .answer {
+            font-weight: bold;
+            color: #007bff;
+            margin-left: 10px;
+        }
+        .show-answer-btn {
+            padding: 8px 15px;
+            background-color: white;
+            color: black;
+            border: 1px solid #ccc;
+            border-radius: 20px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .show-answer-btn:hover {
+            background-color: #f0f0f0;
+            box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
+        }
         @media (max-width: 768px) {
             .container {
                 padding: 15px;
             }
-
+            .back-button {
+                top: 10px;
+                left: 10px;
+            }
             h1 {
+                font-size: 1.5rem;
+                margin-top: 90px; /* Ajuste para evitar sobreposição */
+            }
+            h2 {
                 font-size: 1.25rem;
             }
-
-            h2 {
-                font-size: 1.1rem;
+            .button-container img {
+                max-width: 80px;
+                max-height: 80px;
             }
         }
-
         @media (max-width: 480px) {
             .container {
                 padding: 10px;
             }
-
+            .back-button {
+                top: 5px;
+                left: 5px;
+            }
             h1 {
-                font-size: 1rem;
+                font-size: 1.25rem;
+                margin-top: 100px; /* Ajuste para evitar sobreposição */
             }
-
             h2 {
-                font-size: 1rem;
+                font-size: 1.1rem;
             }
-
             .btn-download {
-                font-size: 0.9rem;
-                padding: 8px;
+                font-size: 1rem;
+                padding: 12px;
+            }
+            .button-container img {
+                max-width: 60px;
+                max-height: 60px;
             }
         }
     </style>
 </head>
 <body>
-<button onclick="window.location.href='../index.html'" style="padding: 10px; background-color: #218838; color: white; border: none; border-radius: 5px; font-size: 1rem; cursor: pointer; transition: background-color 0.3s ease;">
-    Back
-</button>
 
 <div class="container">
-    <h1>There is / There are - David and Goliath</h1>
+    <a href="javascript:history.back()" class="back-button">Back</a>
+    <h1 id="title">Loading title...</h1>
     
     <div class="image-container">
-        <img src="foto4.png" alt="David and Goliath">
+        <img id="main-image" src="image.png" alt="Example Image">
     </div>
 
-    <div class="section">
-        <h2>A</h2>
-        <p>Look at these sentences from the story of David and Goliath:</p>
-        <ul>
-            <li>There is a giant in the valley.</li>
-            <li>There are five stones in David's hand.</li>
-            <li>There is an Israelite army ready for battle.</li>
-            <li>There are many Philistine soldiers.</li>
-        </ul>
+    <div class="button-container">
+        <!-- Botões dos professores serão carregados aqui -->
     </div>
 
-    <div class="section">
-        <h2>B</h2>
-        <p>There is and There are are used to say that something exists or is present.</p>
-        <p><strong>There is</strong> = singular (one thing)</p>
-        <ul>
-            <li>There is a sling in David's hand.</li>
-            <li>There is a young shepherd named David.</li>
-        </ul>
-        <p><strong>There are</strong> = plural (more than one thing)</p>
-        <ul>
-            <li>There are five stones.</li>
-            <li>There are many soldiers in the army.</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>C</h2>
-        <p>Now complete these sentences from the story:</p>
-        <p>1. __________ a giant named Goliath. (There is)</p>
-        <p>2. __________ five smooth stones. (There are)</p>
-        <p>3. __________ a sling in David's hand. (There is)</p>
-        <p>4. __________ many soldiers in the Israelite army. (There are)</p>
-        <p>5. __________ a great battle in the valley. (There is)</p>
-    </div>
-
-    <div class="section">
-        <h2>D</h2>
-        <p>Write the correct form of <strong>there is</strong> or <strong>there are</strong>:</p>
-        <p>1. __________ a shepherd with courage.</p>
-        <p>2. __________ two armies ready for battle.</p>
-        <p>3. __________ a large valley between the armies.</p>
-        <p>4. __________ many stones in the stream.</p>
-        <p>5. __________ a great victory for Israel.</p>
-    </div>
-
-    <div class="section">
-        <h2>E</h2>
-        <p>Questions and Answers:</p>
-        <p>1. What is there in David's hand?</p>
-        <p>- There is a sling and there are five stones.</p>
-        <p>2. Who is there in the valley?</p>
-        <p>- There is a giant named Goliath.</p>
-        <p>3. How many soldiers are there in the Philistine army?</p>
-        <p>- There are many soldiers.</p>
-    </div>
-
-    <div class="section">
-        <h2>F</h2>
-        <p>Now you. Write about what <strong>there is</strong> or <strong>there are</strong> in your favorite story:</p>
-        <input type="text" placeholder="1. ________________________________________________________" readonly>
-        <input type="text" placeholder="2. ________________________________________________________" readonly>
-        <input type="text" placeholder="3. ________________________________________________________" readonly>
+    <div id="content">
+        <!-- Dynamic content will be loaded here -->
     </div>
 
     <button class="btn-download" onclick="generatePDF()">Download as PDF</button>
 </div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+<script>
+    function loadTextFile() {
+        fetch('texto.txt')
+            .then(response => response.text())
+            .then(data => {
+                const contentDiv = document.getElementById('content');
+                const lines = data.split('\n');
+                let currentSection = '';
+                let htmlContent = '';
+
+                lines.forEach(line => {
+                    if (line.startsWith('Title: ')) {
+                        document.getElementById('title').innerText = line.replace('Title: ', '');
+                    } else if (line.startsWith('# ')) {
+                        if (currentSection) {
+                            htmlContent += '</div>';
+                        }
+                        currentSection = line.replace('# ', '');
+                        htmlContent += `<div class="section"><h2>${currentSection}</h2>`;
+                    } else if (line.startsWith('Subtitle: ')) {
+                        htmlContent += `<h2>${line.replace('Subtitle: ', '')}</h2>`;
+                    } else if (line.startsWith('Text: ')) {
+                        htmlContent += `<p>${line.replace('Text: ', '')}</p>`;
+                    } else if (line.includes('[Answer:')) {
+                        const [question, answer] = line.split('[Answer:');
+                        const cleanedAnswer = answer.replace(']', '').trim();
+                        htmlContent += `<p>${question.trim()} <button class="show-answer-btn" onclick="showAnswer(this.nextElementSibling)">Answer</button><span class="answer" style="display:none;">${cleanedAnswer}</span></p>`;
+                    } else {
+                        htmlContent += `<p>${line}</p>`;
+                    }
+                });
+
+                contentDiv.innerHTML = htmlContent + '</div>';
+            })
+            .catch(error => console.error('Error loading the text file:', error));
+    }
+
+    function showAnswer(answerElement) {
+        answerElement.style.display = 'inline';
+    }
+
+    function generatePDF() {
+        fetch('texto.txt')
+            .then(response => response.text())
+            .then(data => {
+                const { jsPDF } = window.jspdf;
+                const doc = new jsPDF();
+                const lines = data.split('\n');
+                let y = 20;
+
+                doc.addImage('Logo.png', 'PNG', 90, y, 30, 30); // Logo reduzida
+                y += 40;
+                doc.setFontSize(12);
+                doc.text("Name: ____________________________  Date: _______________", 20, y);
+                y += 20;
+
+                lines.forEach(line => {
+                    if (line.startsWith('Title: ')) {
+                        doc.setFontSize(16);
+                        doc.text(line.replace('Title: ', ''), 20, y);
+                        y += 20;
+                    } else if (line.startsWith('# ')) {
+                        if (y > doc.internal.pageSize.height - 20) {
+                            doc.addPage();
+                            y = 20;
+                        }
+                        doc.setFontSize(14);
+                        doc.text(line.replace('# ', ''), 20, y);
+                        y += 10;
+                    } else if (line.startsWith('Subtitle: ')) {
+                        doc.setFontSize(14);
+                        doc.text(line.replace('Subtitle: ', ''), 20, y);
+                        y += 10;
+                    } else if (line.startsWith('Text: ')) {
+                        doc.setFontSize(12);
+                        const textLines = doc.splitTextToSize(line.replace('Text: ', ''), 170); // Quebrando o texto longo
+                        doc.text(textLines, 20, y);
+                        y += textLines.length * 10; // Ajuste do valor de y com base no número de linhas
+                    } else if (line.startsWith('Examples from the Creation Story:')) {
+                        doc.setFontSize(12);
+                        doc.text(line, 20, y);
+                        y += 10;
+                    } else if (line.startsWith('"')) {
+                        doc.setFontSize(12);
+                        const textLines = doc.splitTextToSize(line, 170); // Quebrando o texto longo
+                        doc.text(textLines, 25, y);
+                        y += textLines.length * 10; // Ajuste do valor de y com base no número de linhas
+                    } else {
+                        doc.setFontSize(12);
+                        const textLines = doc.splitTextToSize(line, 170); // Quebrando o texto longo
+                        doc.text(textLines, 20, y);
+                        y += textLines.length * 10; // Ajuste do valor de y com base no número de linhas
+                    }
+
+                    if (y > doc.internal.pageSize.height - 20) {
+                        doc.addPage();
+                        y = 20;
+                    }
+                });
+
+                doc.save("grammar_lesson_creation.pdf");
+            })
+            .catch(error => console.error('Error generating the PDF:', error));
+    }
+
+    function loadProfessorButtons() {
+        const buttonContainer = document.querySelector('.button-container');
+        const maxProfessors = 10; // Número máximo de imagens de professores
+
+        for (let i = 1; i <= maxProfessors; i++) {
+            const imgPath = `professores/professor${i}.png`;
+            const img = new Image();
+            
+            img.onload = function() {
+                const button = document.createElement('button');
+                img.alt = `Professor ${i}`;
+                button.appendChild(img);
+                button.onclick = function() {
+                    window.location.href = `aulas/aula${i}/index.html`; // Caminho para o HTML correspondente
+                };
+                buttonContainer.appendChild(button);
+            };
+
+            img.onerror = function() {
+                console.log(`Imagem professor${i}.png não encontrada, pulando.`);
+            };
+
+            img.src = imgPath;
+        }
+    }
+
+    document.addEventListener('DOMContentLoaded', function() {
+        loadTextFile();
+        loadProfessorButtons(); // Chama a função para carregar os botões
+    });
+</script>
 
 </body>
 </html>
